<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:weightSum="100.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_weight="66.6"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.5"
                android:contentDescription="@string/profile_picture"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible"
                />

            <ImageButton
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/camera"
                android:focusable="auto"
                android:scaleX="2"
                android:scaleY="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_camera" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_weight="33.3">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_full_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <EditText
                        android:id="@+id/fullNameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColorHint="#78909C" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/profile_nickname"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="italic" />

                    <EditText
                        android:id="@+id/nicknameEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:gravity="center_horizontal"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColorHint="#757575"
                        android:textStyle="italic" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/emailEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:minHeight="48dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColorHint="#757575"
                        android:textStyle="italic" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_location"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="italic" />

                    <EditText
                        android:id="@+id/locationEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textPostalAddress"
                        android:minHeight="48dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColorHint="#757575"
                        android:textStyle="italic" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_skills"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold|italic" />

                    <EditText
                        android:id="@+id/skillsEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords"
                        android:minHeight="48dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColorHint="#78909C"
                        android:textStyle="bold|italic" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_description"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <EditText
                        android:id="@+id/descriptionEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:minHeight="48dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColorHint="#757575" />
                </TableRow>

            </TableLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>